# cb_soak_tester

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/grafana/dashboards/: couchbase-soak.json
deploy/grafana/provisioning/dashboards/: dashboard.yml
deploy/prometheus/: prometheus.yml
deploy/systemd/: cb-soak.env.example  cb-soak.service
scripts/: install-observability.sh  install-systemd.sh  run-ec2.sh  soak-tmux.sh
soaktester/: __init__.py  _platform.py  cli.py  client.py  config.py  metrics.py  report.py  runner.py  seed.py
